--- a/week1_project/package.json
+++ b/week1_project/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "node-sass": "^4.14.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
@@ -37,10 +38,15 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^7.3.1",
+    "sass-resources-loader": "^2.2.4",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-resources-loader": "^1.4.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
