--- a/week1_project/package.json
+++ b/week1_project/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.6.1",
+    "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
