--- a/week1_project/package.json
+++ b/week1_project/package.json
@@ -10,10 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@riophae/vue-treeselect": "^0.4.0",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
+    "tw-city-selector": "^2.1.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
