--- a/week1_project/package.json
+++ b/week1_project/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@riophae/vue-treeselect": "^0.4.0",
+    "axios": "^0.24.0",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
+    "jssha": "^3.2.0",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
-    "tw-city-selector": "^2.1.1",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-axios": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
